[feature/cloudflare] fixing the flow to use new flow
